--- a/view/waiting.html
+++ b/view/waiting.html
@@ -40,6 +40,7 @@
             socket.off('game_start');
             socket.on('game_start', function(){
                 console.log('game_start');
+                socket.emit('game_start');
                 player_status = GAME_PLAY; // 开始游戏
                 $.pjax({
                     url: '/battle',
