--- a/view/index.html
+++ b/view/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>五子棋</title>
+        <link rel="icon" href="/miao1.jpg" type="image/x-icon" />
+        <link rel="shortcut icon" href="/miao1.jpg" type="image/x-icon"/>
         <link rel="stylesheet" type="text/css" href='/live2D/waifu.css'>
         <link href="https://cdn.bootcss.com/jqueryui/1.12.1/jquery-ui.min.css" rel="stylesheet">
 
