--- a/view/ranking_list.html
+++ b/view/ranking_list.html
@@ -80,10 +80,12 @@
 
         socket.off('player_rank');
         socket.on('player_rank', function(data){
+            var rank_list = $('#ranking_list');
+            ranking_list.empty();
             var len = data.length;
             for (var i=0; i<len; i++)
             {
-                $('#ranking_list').append('<tr><td>'+(i+1)+'</td><td>'+data[i].name+'</td><td>'+data[i].score+'s</td></tr>');
+                rank_list.append('<tr><td>'+(i+1)+'</td><td>'+data[i].name+'</td><td>'+data[i].score+'s</td></tr>');
             }
         });
 
