--- a/view/index.html
+++ b/view/index.html
@@ -210,6 +210,7 @@
             var enemy_name = '(｡･∀･)ﾉﾞx';
             var room_id = '房间号';
 
+            const PLAYER_WHITE = 1, PLAYER_BLACK = 2;
             const GAME_VISIT = 0, GAME_PLAY = 1, GAME_WAIT = 2;
             var player_status = GAME_VISIT;  //0：未游戏  1：游戏中 2：等待中
             
