--- a/view/about.html
+++ b/view/about.html
@@ -55,7 +55,7 @@
         </tr>
         <tr>
             <td>前端</td>
-            <td>一位不愿透露姓名的李女士</td>
+            <td>一位不愿透露姓名的..BAKAGCZ(gayhub)</td>
         </tr>
         <tr>
             <td>后端</td>
