--- a/view/chat_room.html
+++ b/view/chat_room.html
@@ -122,7 +122,7 @@
             for (let i=0;i<msg_list.length;i++)
             {
                 let data = JSON.parse(msg_list[i]);
-                chat_messages_dom.prepend($('<li>').html('<span class="chat_user">' + data.sender + '</span>: ' + data.msg + '<span class="chat_date">    ----- in ' + data.date + '</span>'));
+                chat_messages_dom.append($('<li>').html('<span class="chat_user">' + data.sender + '</span>: ' + data.msg + '<span class="chat_date">    ----- in ' + data.date + '</span>'));
             }
         });
 
