--- a/view/generals.html
+++ b/view/generals.html
@@ -101,7 +101,7 @@
         $('.button').off('click');
         $('.button').on('click', function(){
             $.pjax({
-                url: '/waiting',
+                url: '/room_list',
                 container: '#container'
             });
         });
